--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -40,7 +40,7 @@
 				</label>
 
 				<label class="input-field">
-					<span>Clinic or organization</span>
+					<span>Clinic or Organization</span>
 					<fluent-text-field
 						id="contact-organization"
 						placeholder="City Gastroenterology"></fluent-text-field>
