Change favicon to the proper file, icon.png

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ import "../styles/theme.css";
 		/>
 		<meta name="twitter:image" content="/image.png" />
 		<link rel="canonical" href="https://consultologist.ai/" />
-		<link rel="icon" type="image/svg+xml" href="/logo.png" />
+		<link rel="icon" type="image/svg+xml" href="/icon.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>
 			Consultologist - You handle your specialty, we handle ours.
