Update href links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -67,13 +67,10 @@
 					</svg>
 				</span>
 			</fluent-button>
-			<fluent-anchor
-				href="https://app.consultologist.ai"
-				appearance="subtle">Sign in</fluent-anchor
-			>
-			<fluent-button appearance="accent" id="try-button"
+			<fluent-anchor href="/" appearance="subtle">Sign in</fluent-anchor>
+			<!-- <fluent-button appearance="accent" id="try-button"
 				>Try it free</fluent-button
-			>
+			> -->
 		</div>
 
 		<button
@@ -126,13 +123,12 @@
 						</svg>
 					</span>
 				</fluent-button>
-				<fluent-anchor
-					href="https://app.consultologist.ai"
-					appearance="subtle">Sign in</fluent-anchor
+				<fluent-anchor href="/" appearance="subtle"
+					>Sign in</fluent-anchor
 				>
-				<fluent-button appearance="accent" id="mobile-try-button"
+				<!-- <fluent-button appearance="accent" id="mobile-try-button"
 					>Try it free</fluent-button
-				>
+				> -->
 			</div>
 		</div>
 	</div>
