--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -112,6 +112,8 @@
 				id="pricing-checkout"
 				disabled
 				aria-disabled="true"
+				data-scroll-target="#contact"
+				href="/#contact"
 			>
 				Sign Contract
 			</fluent-button>
